update problem section in study-report

--- a/study.ipynb
+++ b/study.ipynb
@@ -61,6 +61,17 @@
    "source": [
     "## Ergebnisse"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Probleme\n",
+    "\n",
+    "Ein Problem der Studie war es, die verschiedenen Distanzen und Breite der Ziele zu definieren, da wir kein erkennbares muster implementieren wollten. Dafür haben wir die Werte mit einem vorher gesetzten Seed zufällig generiert.\n",
+    "\n",
+    "Ein weiteres Problem war das erzeugen einer realistischen Latenz. Da wir für die Versuchsdurchführung Pyglet verwendeten, konnte die Latenz nicht mit einfachen event-handlern simuliert werden, was ein flackern des Zeigers zur Folge hatte."
+   ]
   }
  ],
  "metadata": {
