Next target in new round

--- a/study.ipynb
+++ b/study.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "Die gestenbasierte Eingabe erfolgte über die Handerkennung der Google MediaPipe. Dabei konnte der Mauszeiger über die Mitte der Hand (erstes Gelenk des Mittelfingers) gesteuert werden, wobei der Linksklick über die Berührung von Daumen und Zeigefinger erfolgte.\n",
     "\n",
-    "Bei der reziproken Antippaufgabe wurden 9 Kreise in einem UserInterface dargestellt. Dabei wurden für die Breite und den Abstand der Kreise alle Kombinationen aus 3 verschiedenen Werten verwendet. Diese wurden in einem Durchlauf automatisch durch das Programm geändert. Für jede dieser 9 Kombinationen mussten die Teilnehmer pro Gerät je 5 Wiederholungen durchlaufen. Damit wurden pro Teilnehmer 180 Datenpunkte erfasst."
+    "Bei der reziproken Antippaufgabe wurden 9 Kreise in einem UserInterface dargestellt. Dabei wurden für die Breite und den Abstand der Kreise alle Kombinationen aus 3 verschiedenen Werten verwendet. Diese wurden in einem Durchlauf automatisch durch das Programm geändert. Für jede dieser 9 Kombinationen mussten die Teilnehmer pro Gerät je 3 Wiederholungen durchlaufen. Bei jeder Möglichkeit wurden 9 Klicks auf Kreise erfasst. Der erste wurde dabei ignoriert. Damit wurden pro Teilnehmer und Gerät 243 Datenpunkte erfasst."
    ]
   },
   {
