--- a/study.ipynb
+++ b/study.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "### Teilnehmer\n",
     "\n",
-    "An unserer Studie nahmen ... Teilnehmer im Alter von ... bis ... Jahren teil (SD = ..., M = ...). ... davon identifizierten sich als weiblich, ... Personen als männlich. Alle Teilnehmer waren Studierende und gaben an, Computer regelmäßig zu verwenden..."
+    "An unserer Studie nahmen 3 Teilnehmer im Alter von 22 bis 56 Jahren teil (SD = ..., M = ...). Zwei davon identifizierten sich als weiblich, eine Personen als männlich. Alle Teilnehmer gaben an, die Maus als häufigste Eingabemethode zu verwenden. Außerdem hatte bisher keiner der  Teilnehmer Erfahrungen mit gestenbasierter Eingabe."
    ]
   },
   {
@@ -66,7 +66,270 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Daten einlesen und zusammenführen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_path = 'study-data'\n",
+    "columns = ['id', 'participant_id', 'input_method', 'latency', 'duration', 'timestamp', 'distance', 'width', 'index_of_difficulty']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>participant_id</th>\n",
+       "      <th>input_method</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>width</th>\n",
+       "      <th>index_of_difficulty</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>participant3</td>\n",
+       "      <td>mouse</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.551746</td>\n",
+       "      <td>1.719589e+09</td>\n",
+       "      <td>275.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>3.459432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>participant3</td>\n",
+       "      <td>mouse</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.664206</td>\n",
+       "      <td>1.719589e+09</td>\n",
+       "      <td>275.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>3.459432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>participant3</td>\n",
+       "      <td>mouse</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.074879</td>\n",
+       "      <td>1.719589e+09</td>\n",
+       "      <td>275.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>3.459432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>participant3</td>\n",
+       "      <td>mouse</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.064473</td>\n",
+       "      <td>1.719589e+09</td>\n",
+       "      <td>275.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>3.459432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>participant3</td>\n",
+       "      <td>mouse</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.495360</td>\n",
+       "      <td>1.719589e+09</td>\n",
+       "      <td>275.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>3.459432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2911</th>\n",
+       "      <td>266</td>\n",
+       "      <td>participant3</td>\n",
+       "      <td>mouse_latency</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.894194</td>\n",
+       "      <td>1.719589e+09</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>3.514573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2912</th>\n",
+       "      <td>267</td>\n",
+       "      <td>participant3</td>\n",
+       "      <td>mouse_latency</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.856843</td>\n",
+       "      <td>1.719589e+09</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>3.514573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2913</th>\n",
+       "      <td>268</td>\n",
+       "      <td>participant3</td>\n",
+       "      <td>mouse_latency</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.797605</td>\n",
+       "      <td>1.719589e+09</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>3.514573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2914</th>\n",
+       "      <td>269</td>\n",
+       "      <td>participant3</td>\n",
+       "      <td>mouse_latency</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>1.129769</td>\n",
+       "      <td>1.719589e+09</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>3.514573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2915</th>\n",
+       "      <td>270</td>\n",
+       "      <td>participant3</td>\n",
+       "      <td>mouse_latency</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>1.031709</td>\n",
+       "      <td>1.719589e+09</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>3.514573</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2916 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id participant_id   input_method  latency  duration     timestamp  \\\n",
+       "0       2   participant3          mouse     0.00  0.551746  1.719589e+09   \n",
+       "1       3   participant3          mouse     0.00  0.664206  1.719589e+09   \n",
+       "2       4   participant3          mouse     0.00  1.074879  1.719589e+09   \n",
+       "3       5   participant3          mouse     0.00  1.064473  1.719589e+09   \n",
+       "4       6   participant3          mouse     0.00  0.495360  1.719589e+09   \n",
+       "...   ...            ...            ...      ...       ...           ...   \n",
+       "2911  266   participant3  mouse_latency     0.15  0.894194  1.719589e+09   \n",
+       "2912  267   participant3  mouse_latency     0.15  0.856843  1.719589e+09   \n",
+       "2913  268   participant3  mouse_latency     0.15  0.797605  1.719589e+09   \n",
+       "2914  269   participant3  mouse_latency     0.15  1.129769  1.719589e+09   \n",
+       "2915  270   participant3  mouse_latency     0.15  1.031709  1.719589e+09   \n",
+       "\n",
+       "      distance  width  index_of_difficulty  \n",
+       "0        275.0   50.0             3.459432  \n",
+       "1        275.0   50.0             3.459432  \n",
+       "2        275.0   50.0             3.459432  \n",
+       "3        275.0   50.0             3.459432  \n",
+       "4        275.0   50.0             3.459432  \n",
+       "...        ...    ...                  ...  \n",
+       "2911     200.0   35.0             3.514573  \n",
+       "2912     200.0   35.0             3.514573  \n",
+       "2913     200.0   35.0             3.514573  \n",
+       "2914     200.0   35.0             3.514573  \n",
+       "2915     200.0   35.0             3.514573  \n",
+       "\n",
+       "[2916 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_frames = []\n",
+    "\n",
+    "# Iteriere durch die Dateien im Ordner\n",
+    "for file_name in os.listdir(folder_path):\n",
+    "    if file_name.endswith('.csv'):\n",
+    "        # Vollständiger Pfad zur CSV-Datei\n",
+    "        file_path = os.path.join(folder_path, file_name)\n",
+    "        \n",
+    "        # Lese die CSV-Datei ein\n",
+    "        df = pd.read_csv(file_path, header=None)\n",
+    "        \n",
+    "        # Füge die Spaltenüberschriften hinzu\n",
+    "        df.columns = columns\n",
+    "        \n",
+    "        # Füge den DataFrame zur Liste hinzu\n",
+    "        data_frames.append(df)\n",
+    "\n",
+    "# Kombiniere alle DataFrames\n",
+    "combined_df = pd.concat(data_frames, ignore_index=True)\n",
+    "\n",
+    "combined_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Probleme\n",
+    "\n",
+    "Es stellte sich für die Teilnehmer als schwierig dar, Objekte am Rand per Gesten zu selektieren, da dort die Hand nicht mehr zuverlässig erkannt werden konnte. Für die Zukunft empfielt es sich, das erfasste Kamerabild nicht in derselben Größe auf Bildschirm zu projezieren.\n",
     "\n",
     "Ein Problem der Studie war es, die verschiedenen Distanzen und Breite der Ziele zu definieren, da wir kein erkennbares muster implementieren wollten. Dafür haben wir die Werte mit einem vorher gesetzten Seed zufällig generiert.\n",
     "\n",
@@ -75,8 +338,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
