--- a/study.ipynb
+++ b/study.ipynb
@@ -71,14 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#parts of this notebook were generated with GPT\n",
     "import pandas as pd\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import statsmodels.api as sm"
+    "import statsmodels.api as sm\n",
+    "import pingouin as pg\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "from statsmodels.stats.anova import AnovaRM\n",
+    "from statsmodels.stats.multicomp import pairwise_tukeyhsd"
    ]
   },
   {
@@ -577,6 +583,86 @@
    "source": [
     "Die Analyse der Daten zeigt, dass die Eingabemethoden Maus und Touchpad ähnliche Steigungen aufweisen, wobei der y-Achsenabschnitt für die Maus niedriger ist. Dies deutet auf eine insgesamt leichtere Nutzung der Maus. \n",
     "Die Gestenbasierte Eingabe hat einen auffällig niedrigen Achsenabschnitt aufgrund ihrer hohen Steigung, was dazu führt, dass der Wert bei einem Index of Difficulty von 0 ins Negative fällt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Statistischer Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test for Sphericity:\n",
+      "SpherResults(spher=True, W=np.float64(14.001004985919444), chi2=np.float64(-1.9060376918175608), dof=5, pval=np.float64(1.0))\n",
+      "ANOVA Results:\n",
+      "                  Anova\n",
+      "=========================================\n",
+      "             F Value Num DF Den DF Pr > F\n",
+      "-----------------------------------------\n",
+      "input_method 22.9950 3.0000 6.0000 0.0011\n",
+      "=========================================\n",
+      "\n",
+      "\n",
+      "Post-hoc Tukey HSD:\n",
+      "       Multiple Comparison of Means - Tukey HSD, FWER=0.05        \n",
+      "==================================================================\n",
+      "    group1        group2    meandiff p-adj   lower   upper  reject\n",
+      "------------------------------------------------------------------\n",
+      "      gesture         mouse  -1.4249 0.0049 -2.3461 -0.5038   True\n",
+      "      gesture mouse_latency  -0.9288 0.0482 -1.8499 -0.0077   True\n",
+      "      gesture      touchpad  -1.1873  0.014 -2.1084 -0.2662   True\n",
+      "        mouse mouse_latency   0.4961 0.3719  -0.425  1.4172  False\n",
+      "        mouse      touchpad   0.2376 0.8408 -0.6835  1.1588  False\n",
+      "mouse_latency      touchpad  -0.2585 0.8061 -1.1796  0.6626  False\n",
+      "------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test for Sphericity:')\n",
+    "sphericity_results = pg.sphericity(data=combined_df, dv='duration', within='input_method', subject='participant_id')\n",
+    "print(sphericity_results)\n",
+    "\n",
+    "aggregated_df = combined_df.groupby(['participant_id', 'input_method']).agg({'duration': 'mean'}).reset_index()\n",
+    "\n",
+    "print('ANOVA Results:')\n",
+    "anova_model = AnovaRM(aggregated_df, depvar='duration', subject='participant_id', within=['input_method'])\n",
+    "anova_results = anova_model.fit()\n",
+    "print(anova_results)\n",
+    "\n",
+    "print('\\nPost-hoc Tukey HSD:')\n",
+    "posthoc = pairwise_tukeyhsd(aggregated_df['duration'], aggregated_df['input_method'], alpha=0.05)\n",
+    "print(posthoc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zur Überprüfung der Wirkung verschiedener Eingabemethoden auf die Ausführungsdauer führten wir eine Varianzanalyse (ANOVA) für wiederholte Messungen durch. Zur Überprüfung der Annahme der Sphärizität verwendeten wir den Sphärizitätstest. Die Ergebnisse bestätigten, dass die Annahme der Sphärizität erfüllt ist (W = 14.001, p = 1.0). \n",
+    "Die ANOVA zeigte einen signifikanten Unterschied in den Dauerwerten (F(3, 6) = 22.995, p = 0.0011), was darauf hindeutet, dass die Eingabemethode einen statistisch signifikanten Einfluss auf die Dauer hat.\n",
+    "\n",
+    "Um die signifikanten Unterschiede zwischen den einzelnen Eingabemethoden weiter zu untersuchen, führten wir Tukey-HSD-Post-hoc-Tests durch. Die Ergebnisse sind in Tabelle 1 zusammengefasst. Die Tukey-HSD-Post-hoc-Tests zeigten, dass die Eingabemethode per Handgeste signifikant langsamer war als Mouse (p = 0.0049), Mouse_Latency (p = 0.0482), und Touchpad (p = 0.014). Zwischen Mouse, Mouse_Latency und Touchpad wurden keine signifikanten Unterschiede gefunden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Diskussion\n",
+    "\n",
+    "Unsere Analyse zeigte, dass die Eingabemethode einen erheblichen Einfluss auf die Ausführungsdauer einer reziproken Antippaufgabe hat. Die Gesture-Eingabemethode war im Durchschnitt langsamer als die anderen Methoden, was darauf hindeutet, dass Gestenbasierte Interaktionen mehr Zeit erfordern könnten als traditionelle Zeigegeräte wie Mouse und Touchpad. Dies könnte auf die zusätzliche Komplexität und die notwendigen Verarbeitungszeiten für Gestenerkennung zurückzuführen sein.\n",
+    "\n",
+    "Für zukünftige Untersuchungen könnten zusätzliche Faktoren wie die Aufgabenkomplexität, die Erfahrung der Benutzer mit den Eingabemethoden und deren Kontext der Nutzung berücksichtigt werden. Dies könnte ein umfassenderes Verständnis der Stärken und Schwächen jeder Eingabemethode bieten."
    ]
   },
   {
